--- a/index.html
+++ b/index.html
@@ -19,35 +19,32 @@
 <body>
   <header>
     <nav id="header-nav" class="navbar navbar-default">
-      <div class="container">
+      <div class="container-fluid">
         <div class="navbar-header">
-          <div class="navbar-brand" href="#"><a>Food, LLC</a></div>
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
             <span class="sr-only">Toggle navigation</span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <div id="collapsable-nav" class="collapse navbar-collapse">
-            <ul id="nav-list" class="nav navbar-nav navbar-right visible-xs">
-              <li>
-                <a href="#"></span><br class="hidden-xs"> Chicken</a>
-              </li>
-              <li>
-                <a href="#"><br class="hidden-xs"> Beef</a>
-              </li>
-              <li>
-                <a href="#"></span><br class="hidden-xs"> Sushi</a>
-             </li>
-            </ul><!-- #nav-list -->
-          </div>
-        </div>
+          <a id="brand_text" class="navbar-brand" href="#index.html">Food, LLC</a>
+      </div>
       </div>
     </nav>
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul id="colapsed-menu" class="nav navbar-nav visible-xs">
+        <li id="chicken"><a href="#">Chicken</a></li>
+        <li id="beef"><a href="#">Beef</a></li>
+        <li id="sushi"><a href="#">Sushi</a></li>
+      </ul>
+
+
+
+
   </header>
   <h1>Our Menu</h1>
   <div class = "row">
-      <div id="chickenDiv" class="col-lg-12">
+      <div class="col-lg-12">
         <p class="pTitle">Chicken</p>
         <p class="pContent">Okay, one more small topic
            before we finish this lecture. We spoke
