finishing last modifications

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <link rel="stylesheet" href="css/styles.css">
   </head>
 <body>
-  <header>
-    <nav id="header-nav" class="navbar navbar-default">
+  <header id="header-top">
+    <nav id="header-nav" class="navbar navbar-default ">
       <div class="container-fluid">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
@@ -37,9 +37,6 @@
         <li id="beef"><a href="#">Beef</a></li>
         <li id="sushi"><a href="#">Sushi</a></li>
       </ul>
-
-
-
 
   </header>
   <h1>Our Menu</h1>
