--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="css/styles.css">
   </head>
 <body>
-  <header id="header-top">
+  <header>
     <nav id="header-nav" class="navbar navbar-default ">
       <div class="container-fluid">
         <div class="navbar-header">
