--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="css/styles.css">
   </head>
 <body>
-  <header>
+  <header >
     <nav id="header-nav" class="navbar navbar-default ">
       <div class="container-fluid">
         <div class="navbar-header">
@@ -33,20 +33,60 @@
     </nav>
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul id="colapsed-menu" class="nav navbar-nav visible-xs">
-        <li id="chicken"><a href="#">Chicken</a></li>
-        <li id="beef"><a href="#">Beef</a></li>
-        <li id="sushi"><a href="#">Sushi</a></li>
+        <li id="chicken"><a href="#Chi">Chicken</a></li>
+        <li id="beef"><a href="#Be">Beef</a></li>
+        <li id="sushi"><a href="#Sush">Sushi</a></li>
       </ul>
 
   </header>
-  <h1>Our Menu</h1>
+  <h1 >Our Menu</h1>
   <div class = "row">
-      <div class="col-lg-12">
+      <div id="Chi" class="col-lg-4 col-md-6 col-xs-12">
         <p class="pTitle">Chicken</p>
-        <p class="pContent">Okay, one more small topic
-           before we finish this lecture. We spoke
-           before about box sizing, so specifying the
-            size of the box.</p>
+        <p class="pContent">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+           sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim 
+           ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip 
+           ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate 
+           velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat 
+           cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id 
+           est laborum,
+           Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+           sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim 
+           ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip 
+           ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate 
+           velit esse cillum dolore eu fugiat nulla pariatur. 
+           <br><a href="#top">Back to top</a></p>
+      </div>
+      <div id="Be" class="col-lg-4 col-md-6 col-xs-12">
+        <p class="pTitle">Beef</p>
+        <p class="pContent">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+           sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim 
+           ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip 
+           ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate 
+           velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat 
+           cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id 
+           est laborum.
+           Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+           sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim 
+           ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip 
+           ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate 
+           velit esse cillum dolore eu fugiat nulla pariatur.
+           <br><a href="#top">Back to top</a></p>
+      </div>
+      <div id="sush" class="col-lg-4 col-md-12 col-xs-12">
+        <p class="pTitle">Sushi</p>
+        <p class="pContent">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+           sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim 
+           ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip 
+           ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate 
+           velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat 
+           cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id 
+           est laborum
+           Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+           sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim 
+           ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip 
+           ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate 
+           velit esse cillum dolore eu fugiat nulla pariatur. <br><a href="#top">Back to top</a></p>
       </div>
   </div>
 
